# fastapi-boilerplate

./: .dockerignore  .gitignore  Makefile  README.md  alpine.Dockerfile  docker-compose.yml  example_app.env  example_postgres.env  hello.py  postgresql.conf  pyproject.toml
migrations/models/: 0_20250313100715_init.py
source/: __init__.py  celery_app.py  database.py  models.py  settings.py  tasks.py
source/api/: exception_handlers.py  main.py  schemas.py
source/app/: __init__.py  example_ws.py
